<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/main_title_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textSize="@dimen/main_dingbu"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="清空卡"
            android:visibility="gone" />

        <TextView
            android:id="@+id/main_time"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@+id/main_title_tx"
            android:gravity="bottom"
            android:textSize="28dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/content_back"
            android:orientation="vertical"
            android:padding="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_trans_msg"
                android:textSize="@dimen/main_first" />

            <ImageView
                android:id="@+id/main_show_photo"
                android:layout_width="400dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/main_show_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_second" />

            <TextView
                android:id="@+id/main_show_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:textSize="@dimen/main_second" />

            <TextView
                android:id="@+id/main_show_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:textSize="@dimen/main_second" />

            <TextView
                android:id="@+id/main_show_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:textSize="@dimen/main_second" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.7"
                android:background="@drawable/content_back"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_trans_content"
                    android:textSize="@dimen/main_first" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin"
                    android:text="@string/str_trans_content1"
                    android:textSize="@dimen/main_second" />

                <TextView
                    android:id="@+id/main_text_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_margin"
                    android:text="@string/str_trans_content2"
                    android:textSize="@dimen/main_second" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/content_back"
                android:gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/main_progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:indeterminate="false"
                    android:indeterminateDrawable="@drawable/empty_loading_progress"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/main_show_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/str_trans_state1"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/main_most"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_company"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_height="20dp" />
    <SurfaceView
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/main_surface" />
</LinearLayout>